fix sizing for introduction on mobile

--- a/style.css
+++ b/style.css
@@ -279,6 +279,14 @@ footer a {
         --fs-body: 1rem;
     }
 
+    .intro .section-title {
+        font-size: var(--fs-h2);
+    }
+
+    .intro .section-subtitle {
+        font-size: var(--fs-body);
+    }
+
     .skill-container {
         margin: 2px;
         float: none;
